[OCO-43] Marketplace - Ajuste de Filtros , Adiciona abas em todas as telas

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/charts/base-chart/base-chart.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/charts/base-chart/base-chart.component.html
@@ -1,12 +1,4 @@
-<app-card >
-    <div class="row">
-        <div class="col-12">
-            <label class="ms-2 fs-5 text-truncate" style="max-width: 100%;font-weight: 500;">
-                {{title}}
-            </label>
-        </div>
-    </div>
-
+<app-card title="{{title}}">
     <div class="row" style="height: 240px;">
         <div class="col-12">
             <canvas class="m-auto w-100"  style="max-height: 240px;"
