--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-batches/page-batches.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-batches/page-batches.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="row">
-        <app-tab [tabs]="['Consulta', 'Adicionar']" [icons]="['bi bi-search','bi bi-plus-lg']"
+        <app-tab [tabs]="tabs"
             [(index)]="tabIndex"></app-tab>
     </div>
 
