--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/modals/modal-user-register/modal-user-register-internal.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/modals/modal-user-register/modal-user-register-internal.component.html
@@ -78,7 +78,7 @@
     </div>
 </div>
 
-<div class="modal-body" *ngIf="loading">
+<div *ngIf="loading">
     <div class="row">
         <app-spinner-black></app-spinner-black>
     </div>
