--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/pagination/pagination.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/pagination/pagination.component.html
@@ -1,7 +1,7 @@
 <style>
     .btn-pgn{
-        min-width: 40px;
-        height: 40px;
+        min-width: 32px;
+        height: 32px;
         font-size: 12px;
         font-weight: bolder;
     }
@@ -36,7 +36,7 @@
                 </button>
             </ng-container>
             
-            <ng-container *ngIf="totalPages != 1">
+            <ng-container *ngIf="totalPages != 1 && totalItems !=0">
                 <button *ngFor="let pageItem of pageList" 
                     class="btn btn-outline-primary me-1 btn-pgn" 
                     [ngClass]="{'active': pageItem == this.page}" 
