--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-products/tabs/tab-product-table/tab-product-table.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-products/tabs/tab-product-table/tab-product-table.component.html
@@ -1,51 +1,56 @@
-<!-- SearchFields -->
-<app-searchfield (OnFilter)="LoadTableData()" (OnClear)="ClearSearch()">
-    <div class="col-4 mt-2">
-        <app-basefield [fieldType]="2" label="Razão Social" placeholder="Digite um nome ..."
-            [(text_value)]="searchField_name.value">
-        </app-basefield>
-    </div>
-
-    <div class="col-4 mt-2">
-        <app-basefield [fieldType]="0" [items]="ddl_categories_options" label="Categoria"
-                placeholder="Selecione uma Categoria ..." notFoundText="Nenhum Item Encontrado"
-                [(selected_item)]="categoryId"
-                (selected_itemChange)="LoadSubCategories()">
-        </app-basefield>
-    </div>
-
-    <div class="col-4 mt-2">
-        <app-basefield [fieldType]="0" [items]="ddl_subcategories_options" label="Subcategoria"
-                placeholder="Selecione uma Subcategoria ..." notFoundText="Nenhum Item Encontrado"
-                [(selected_item)]="searchField_subCategoryId.value">
-        </app-basefield>
-    </div>
-</app-searchfield>
-
 <!-- Spinner -->
 <div class="row" *ngIf="isLoading">
     <app-spinner-black></app-spinner-black>
 </div>
 
-
-
-<div class="row card mt-2 p-2 ">
-    <div class="col-12">
-        <!-- Mensagem de não encontrado -->
-        <div class="row text-center py-4 mt-3" *ngIf="products.length == 0 && !isLoading">
-            <h5>Nenhum resultado encontrado.</h5>
-        </div>
-
-        <!-- Tabela -->
-        <div class="row" *ngIf="products.length > 0 && !isLoading">
-            <div *ngFor="let item of products" class="col-6">
-                <app-product-card [product]="item"></app-product-card>
+<div class="row p-0 m-0">
+    <!-- SearchFields -->
+    <div class="col-auto me-2">
+        <app-searchfield (OnFilter)="LoadTableData()" (OnClear)="ClearSearch()">
+            <div class="col-12 mt-2">
+                <app-basefield [fieldType]="2" label="Nome" placeholder="Digite um nome ..."
+                    [(text_value)]="searchField_name.value">
+                </app-basefield>
             </div>
-        </div>
-
-        <!-- Paginação -->
-        <app-pagination [totalItems]="totalItems" (OnPageChange)="ChangePage($event)"
-            (OnMaxItensChange)="ChangePageSize($event)"></app-pagination>
+    
+            <div class="col-12 mt-2">
+                <app-basefield [fieldType]="0" [items]="ddl_categories_options" label="Categoria"
+                    placeholder="Selecione uma Categoria ..." notFoundText="Nenhum Item Encontrado"
+                    [(selected_item)]="categoryId" (selected_itemChange)="LoadSubCategories()">
+                </app-basefield>
+            </div>
+    
+            <div class="col-12 mt-2">
+                <app-basefield [fieldType]="0" [items]="ddl_subcategories_options" label="Subcategoria"
+                    placeholder="Selecione uma Subcategoria ..." notFoundText="Nenhum Item Encontrado"
+                    [(selected_item)]="searchField_subCategoryId.value">
+                </app-basefield>
+            </div>
+        </app-searchfield>
     </div>
 
+
+    <!-- Table -->
+    <div class="col">
+        <div class="row card mt-2 p-2 ">
+            <div class="col-12">
+                <!-- Mensagem de não encontrado -->
+                <div class="row text-center py-4 mt-3" *ngIf="products.length == 0 && !isLoading">
+                    <h5>Nenhum resultado encontrado.</h5>
+                </div>
+
+                <!-- Tabela -->
+                <div class="row" *ngIf="products.length > 0 && !isLoading">
+                    <div *ngFor="let item of products" class="col-6">
+                        <app-product-card [product]="item"></app-product-card>
+                    </div>
+                </div>
+
+                <!-- Paginação -->
+                <app-pagination [totalItems]="totalItems" (OnPageChange)="ChangePage($event)"
+                    (OnMaxItensChange)="ChangePageSize($event)"></app-pagination>
+            </div>
+
+        </div>
+    </div>
 </div>
