--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/charts/base-chart/base-chart.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/charts/base-chart/base-chart.component.html
@@ -1,5 +1,5 @@
 <app-card title="{{title}}">
-    <div class="row" style="height: 240px;">
+    <div class="row m-0 p-0" style="height: 240px;">
         <div class="col-12">
             <canvas class="m-auto w-100"  style="max-height: 240px;"
                 baseChart
