--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/dash-card/dash-card.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/dash-card/dash-card.component.html
@@ -1,5 +1,5 @@
 <app-card>
-    <div class="row m-0">
+    <div class="row m-0 p-2">
         <div class="col-12 p-0">
             <div class="row m-0">
                 <label class="col-10 my-auto p-0">$ 69420,00</label>
