--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-batches/tabs/tab-batch-table/tab-batch-table.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-batches/tabs/tab-batch-table/tab-batch-table.component.html
@@ -62,8 +62,11 @@
                                     </button>
     
                                     <div ngbDropdownMenu="action">
-                                        <button ngbDropdownItem type="button" (click)="Modal_Edit(item.id)">
+                                        <button ngbDropdownItem type="button" (click)="SelectAction(2, item.id)">
                                             <i class="bi bi-pencil-square me-2"></i>Editar
+                                        </button>
+                                        <button ngbDropdownItem type="button" (click)="SelectAction(3, item.id)">
+                                            <i class="bi bi-clock-fill me-2"></i>Histórico
                                         </button>
                                     </div>
                                 </div>
